# agamotto

./: .gitignore  AGAMOTTO.md  AGAMOTTO_ROADMAP.md  Cargo.toml  README.md
src/: error.rs  logging.rs  main.rs
src/app/: mod.rs  shell.rs  state.rs
src/domain/: mod.rs  schedule.rs  settings.rs  task.rs  validation.rs
src/ml/: mod.rs
src/nlp/: mod.rs
src/scheduling/: mod.rs
src/storage/: mod.rs
src/ui/: theme.rs
src/ui/screens/: mod.rs  placeholder.rs
